# osal-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/osal/: Cargo.toml
crates/osal-api/: Cargo.toml
crates/osal-backend-freertos/: Cargo.toml
crates/osal-backend-freertos-sys/: Cargo.toml  build.rs
crates/osal-backend-freertos-sys/csrc/: osal_freertos_shim.c
crates/osal-backend-freertos-sys/include/: osal_freertos_shim.h
crates/osal-backend-freertos-sys/src/: lib.rs  sync_fixture.rs
crates/osal-backend-freertos/src/: clock.rs  lib.rs  mutex.rs  runtime.rs  semaphore.rs  wait.rs
crates/osal-backend-freertos/tests/: clock_contract.rs  clock_stabilization.rs  system_contract.rs
crates/osal-backend-mock/: Cargo.toml
crates/osal-backend-posix/: Cargo.toml
crates/osal-portable/: Cargo.toml
crates/osal-shared/: Cargo.toml
docs/: architecture-zh.md  architecture.md  backend-contract-zh.md  backend-contract.md  behavior-contract-zh.md  behavior-contract.md  clock-timer-foundation-slice.md  documentation-policy.md  object-lifetime-zh.md  object-lifetime.md  queue-foundation-slice.md  task-foundation-slice.md
docs/adr/: 0001-error-precedence.md  0002-queue-close-semantics.md  0003-isr-api-policy.md  0004-query-method-policy.md  0005-mock-runtime-model.md  0006-object-handle-model.md  0009-clock-time-domain-model.md  0010-timer-execution-model.md  0013-task-context-and-live-count.md  0014-backend-bsp-boundary.md  0015-runtime-lifecycle.md  0016-linearizable-runtime-lease.md  0017-posix-no-std-boundary.md  (+5 more)
(+111 files in other folders)
